# showcase-portfolio

./: CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  _config.yml  ecosystem.yaml  pyproject.toml  seed.yaml
.github/workflows/: ci.yml
data/: works.json
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/pitch/: index.html
docs/source-materials/: PROVENANCE.yaml
docs/source-materials/prototypes/: Anthony_James_Padavano_CV.html  accessibility.spec.ts  ai-engine.ts  analytics-route.test.ts  analytics-view-tracker.tsx  analytics.ts  analyze-style-dna.ts  analyzer.ts  api.ts  archive-browser.tsx  artifact-overlay.tsx  audio-synth.test.ts  broadcast-signal.ts  build-mirror-manifest.ts  build-node-map-data.ts  canonical-content.test.ts  chrono-helix.tsx  codex-ai.test.ts  compare-fidelity.ts  console.tsx  content-engine.test.ts  content.ts  counterpoint-sketch.ts  error-boundary.test.tsx  error.tsx  evolution-view.tsx  export-publishable.ts  feed-view.tsx  generate-cycle-4.ts  generate-full-corpus.ts  generator.ts  hero-sketch.ts  icon.tsx  index.ts  ingest-canonical.ts  ingest-evolution.ts  layout-transition.tsx  layout.tsx  loading.test.tsx  loading.tsx  (+45 more)
docs/source-materials/specs/: Anthony_James_Padavano_CV.yaml  Anthony_James_Padavano_Multimedia.yaml  _gemini_visit_20260102.json  artifacts.json  broadcast-log.json  canonical-fidelity-report.json  canonical-manifest.json  commentary.json  corpus-manifest.json  (+13 more)
src/: __init__.py  __main__.py  collector.py  gallery.py  renderer.py
tests/: test_collector.py  test_gallery.py  test_renderer.py
(+76 files in other folders)
